# python-calculator

./: calculator.py  config.py  pyproject.toml  requirements.txt  test_calculator.py
.github/workflows/: reusable-test.yml  test.yml  use-reusable.yml
